# tkp-conversation-normalizer

./: .gitignore  GITHUB_REPOSITORY_CONTRACT.md  LICENSE  PUBLICATION_READINESS.md  README.md  pyproject.toml
.github/workflows/: windows-verification.yml
docs/: INPUT_OUTPUT_CONTRACT.md  LIMITATIONS.md  PRIVACY_AND_SECURITY.md  PROJECT_FOREMAN_RELATIONSHIP.md
evidence/: HISTORIC_VALIDATION_SUMMARY.md  PUBLIC_TEST_RECEIPT.json
evidence/public_fixture_run/receipts/: CHECKSUMS.sha256  Normalization_Run_Receipt.json
evidence/public_fixture_run/registers/: Asset_Reference_Register.json  Conversation_Restart_Candidate_Register.json  Observed_Branch_Register.json
fixtures/: sanitized_conversations.json
scripts/: initialize_and_push.ps1  run_fixture.ps1
src/tkp_conversation_normalizer/: __init__.py  cli.py  normalizer.py
src/tkp_conversation_normalizer/schema/: normalized_conversation.schema.json
tests/: test_cli.py  test_normalizer.py
