[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tkp-conversation-normalizer"
version = "0.1.0"
description = "Graph-aware, source-traceable normalization for OpenAI conversation exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.22"]
authors = [{name = "Torch & Key"}]
keywords = ["conversation", "normalization", "openai-export", "provenance", "project-foreman"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha"
]

[project.scripts]
tkp-normalize = "tkp_conversation_normalizer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tkp_conversation_normalizer = ["schema/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
